<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/navHeaderDrawer"
    android:layout_width="match_parent"
    android:layout_height="192dp"
    android:background="#33669999"
    android:theme="@style/ThemeOverlay.MaterialComponents">

    <ImageView
        android:id="@+id/navHeaderLogo"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_logo"
        app:layout_constraintBottom_toTopOf="@id/navHeaderAppName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/navHeaderAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:textColor="#000"
        android:text="@string/app_name"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/navHeaderTeamName"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/navHeaderTeamName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:textColor="#000"
        android:text="@string/app_team"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Overline"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@id/navHeaderAppVersion"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/navHeaderAppVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:textColor="#000"
        android:text="@string/app_version"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Overline"
        android:textSize="12sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>