<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/primaryLightColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/imgPlayBarImage"
            android:layout_width="?attr/actionBarSize"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginStart="16dp"
            android:padding="2dp"
            android:src="@drawable/avatar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/imgPlayBarInfo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/imgPlayBarPrev"
            app:layout_constraintStart_toEndOf="@id/imgPlayBarImage"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/imgPlayBarSong"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="marquee"
                android:marqueeRepeatLimit="marquee_forever"
                android:singleLine="true"
                android:text="@string/playBarSong"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/imgPlayBarArtist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="marquee"
                android:marqueeRepeatLimit="marquee_forever"
                android:singleLine="true"
                android:text="@string/playBarArtist"
                android:textSize="10sp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imgPlayBarPrev"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginEnd="72dp"
            android:src="@drawable/ic_prev"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/imgPlayBarNext"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imgPlayBarNext"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/ic_next"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>

    <com.devadvance.circularseekbar.CircularSeekBar
        android:id="@+id/seekBarPlay"
        android:layout_width="?attr/actionBarSize"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="16dp"
        android:padding="0dp"
        app:circle_x_radius="28dp"
        app:circle_y_radius="28dp"
        app:end_angle="270"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:pointer_color="#0174DF"
        app:pointer_halo_color="#880174DF"
        app:pointer_radius="-5.5dp"
        app:progress="25"
        app:start_angle="270" />

    <ImageView
        android:id="@+id/imgPlayBarPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="21dp"
        android:contentDescription="@string/playBarPlay"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_play_circle" />
</android.support.constraint.ConstraintLayout>